<resources>
    <string name="app_name">FlashCards</string>
    <string name="NewListButton">Add New FlashNotes List</string>
    <string name="new_note">Add new Note</string>
    <string name="play">Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_label">Total time:</string>
    <string name="lng">Language</string>
    <string name="base_lng">Base language</string>
    <string name="target_lng">Target language</string>
    <string name="Name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="listname">Enter List Name</string>
    <string name="front">Front side</string>
    <string name="back">Back side</string>
    <string name="extended_fab_content_desc">a</string>
    <string name="extended_fab_label">b</string>
    <string name="hintTranslate">Type here to translate</string>
    <string name="no_data_available">Note list empty. Add note to fill</string>
    <string name="button">Add</string>
    <string name="translate">Translate</string>
    <string name="gtranslate">gTranslate</string>
    <string name="langChangedNotificationTitle">Language Changed</string>
    <string name="langChangedNotificationText">Default Langauge in FlashNotesAPP has changed</string>
    <string-array name="languages">
        <item>en</item>
        <item>pl</item>
        <item>de</item>
        <item>rus</item>
    </string-array>
</resources>
